# pumon

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md
.agents/: README.md  development-plan.md  module-design.md  project-structure.md  release-engineering.md  requirements.md
.github/workflows/: ci.yml  npm.yml  release.yml
crates/procwatch-cli/: Cargo.toml
crates/procwatch-cli/src/: main.rs
crates/procwatch-config/: Cargo.toml
crates/procwatch-config/src/: load.rs  normalize.rs
crates/procwatch-core/: Cargo.toml
crates/procwatch-core/src/: app.rs  error.rs  lib.rs  state.rs
crates/procwatch-logging/: Cargo.toml
crates/procwatch-logging/src/: lib.rs
crates/procwatch-node-support/: Cargo.toml
crates/procwatch-node-support/src/: config_loader.rs  package_manager.rs  runtime_resolver.rs
crates/procwatch-platform/: Cargo.toml
crates/procwatch-platform/src/: paths.rs
crates/procwatch-process/: Cargo.toml
crates/procwatch-process/src/: state_store.rs  supervisor.rs
crates/promon-cli/: Cargo.toml
crates/promon-cli/src/: main.rs
crates/promon-config/: Cargo.toml
crates/promon-config/src/: detect.rs  load.rs  normalize.rs
crates/promon-core/: Cargo.toml
crates/promon-core/src/: app.rs  error.rs  runtime.rs  state.rs
crates/promon-logging/: Cargo.toml
crates/promon-logging/src/: lib.rs
crates/promon-node-support/: Cargo.toml
crates/promon-node-support/src/: config_loader.rs  lib.rs  package_manager.rs  runtime_resolver.rs
crates/promon-platform/: Cargo.toml
crates/promon-platform/src/: lib.rs  paths.rs  process.rs
crates/promon-process/: Cargo.toml
crates/promon-process/src/: state_store.rs  supervisor.rs
crates/pumon-cli/: Cargo.toml
crates/pumon-cli/src/: main.rs
crates/pumon-config/: Cargo.toml
crates/pumon-config/src/: lib.rs  load.rs  normalize.rs
crates/pumon-core/: Cargo.toml
crates/pumon-core/src/: app.rs  error.rs
crates/pumon-logging/: Cargo.toml
crates/pumon-logging/src/: lib.rs
crates/pumon-node-support/: Cargo.toml
crates/pumon-node-support/src/: config_loader.rs  package_manager.rs  runtime_resolver.rs
crates/pumon-platform/: Cargo.toml
crates/pumon-platform/src/: paths.rs  process.rs
crates/pumon-process/: Cargo.toml
crates/pumon-process/src/: lib.rs  state_store.rs  supervisor.rs
docs/: cli.md  configuration.md  release-channels.md  service.md
examples/basic/: ecosystem.config.json  server.js
examples/cluster/: ecosystem.config.json  ecosystem.config.yaml  server.js
examples/package-script/: ecosystem.config.js  package.json  server.mjs
examples/typescript/: ecosystem.config.ts  package.json
examples/typescript/src/: server.ts
fixtures/node-apps/crash/: ecosystem.config.json  server.js
fixtures/node-apps/logger/: ecosystem.config.json  server.js
fixtures/node-apps/memory/: ecosystem.config.json  server.js
fixtures/node-apps/package-script/: ecosystem.config.js  package.json  server.mjs
fixtures/node-apps/ts-loader/: ecosystem.config.json  package.json  server.ts
fixtures/node-apps/ts-prebuilt/: ecosystem.config.json
fixtures/node-apps/watcher/: ecosystem.config.json  server.js
scripts/: build-release.sh  publish-npm-local.ts  smoke.sh
