[package]
name = "procwatch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "procwatch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
globset.workspace = true
procwatch-config = { path = "../procwatch-config" }
procwatch-core = { path = "../procwatch-core" }
procwatch-logging = { path = "../procwatch-logging" }
procwatch-node-support = { path = "../procwatch-node-support" }
procwatch-platform = { path = "../procwatch-platform" }
procwatch-process = { path = "../procwatch-process" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
