[package]
name = "procwatch-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
procwatch-core = { path = "../procwatch-core" }
procwatch-node-support = { path = "../procwatch-node-support" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true

