[package]
name = "procwatch-node-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
procwatch-core = { path = "../procwatch-core" }
procwatch-platform = { path = "../procwatch-platform" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
which.workspace = true

