[package]
name = "promon-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
promon-core = { path = "../promon-core" }
promon-node-support = { path = "../promon-node-support" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true

