[package]
name = "promon-process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
promon-core = { path = "../promon-core" }
promon-logging = { path = "../promon-logging" }
promon-node-support = { path = "../promon-node-support" }
promon-platform = { path = "../promon-platform" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

