[package]
name = "pumon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pumon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
globset.workspace = true
pumon-config = { path = "../pumon-config" }
pumon-core = { path = "../pumon-core" }
pumon-logging = { path = "../pumon-logging" }
pumon-node-support = { path = "../pumon-node-support" }
pumon-platform = { path = "../pumon-platform" }
pumon-process = { path = "../pumon-process" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
