[package]
name = "pumon-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pumon-core = { path = "../pumon-core" }
pumon-node-support = { path = "../pumon-node-support" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true

