[package]
name = "pumon-node-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pumon-core = { path = "../pumon-core" }
pumon-platform = { path = "../pumon-platform" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
which.workspace = true

