[package]
name = "pumon-process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pumon-core = { path = "../pumon-core" }
pumon-logging = { path = "../pumon-logging" }
pumon-node-support = { path = "../pumon-node-support" }
pumon-platform = { path = "../pumon-platform" }
chrono.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
rusqlite.workspace = true
